--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homease - Find Your Perfect Roommate & Flat</title>
+    <link rel="icon" type="image/png" href="./public/favicon.png" />
     <meta name="description" content="Modern roommate and flat-finding platform for students and young professionals. Find your vibe, flat, and flatmate." />
     <meta name="author" content="Flatmate Vibe" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,10 +15,6 @@
     <meta property="og:description" content="Modern roommate and flat-finding platform for students and young professionals" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
