fix the metadata

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Flatmate Vibe - Find Your Perfect Roommate & Flat" />
     <meta property="og:description" content="Modern roommate and flat-finding platform for students and young professionals" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="../Frontend/public/Homease_preview.png" />
+    <meta property="og:image" content="https://i.postimg.cc/66fxHTmv/Homease-preview.png" />
   </head>
 
   <body>
